# VectorMatrixElementaryOperations

./: CMakeLists.txt  README.md  main.cpp
headers/: auxiliary.hpp  exceptions.hpp  moreVectorMatrixOps.hpp  myColumnVector.hpp  myMatrix.hpp  myRowVector.hpp  myVector.hpp
include/: CMakeLists.txt  auxiliary.cpp  moreVectorMatrixOps.cpp  myColumnVector.cpp  myMatrix.cpp  myRowVector.cpp  myVector.cpp
tests/: addColumnVectors.hpp  addMatrices.hpp  addRowVectors.hpp  mulColumnRowVectors.hpp  mulMatrices.hpp  mulMatrixColumnVector.hpp  mulRowColumnVectors.hpp  mulRowVectorMatrix.hpp  scalarMulColumnVector.hpp  scalarMulMatrix.hpp  scalarMulRowVector.hpp
